FEATURE: Add Vehicle Consultation menu item to CRM sidebar

--- a/public/crm.html
+++ b/public/crm.html
@@ -87,6 +87,11 @@
                     <span class="menu-icon"><i class="fas fa-calculator"></i></span>
                     <span>Calculadora de Prazos</span>
                 </div>
+                <div class="menu-item" onclick="window.open('consulta-veicular.html', '_blank')"
+                    style="cursor: pointer;">
+                    <span class="menu-icon"><i class="fas fa-car"></i></span>
+                    <span>Consulta Veicular</span>
+                </div>
                 <div class="menu-item admin-only hidden" data-view="system-info">
                     <span class="menu-icon"><i class="fas fa-info-circle"></i></span>
                     <span>Informações do Sistema</span>
