FEAT: Make process/client items clickable + add archive client button

--- a/public/crm.html
+++ b/public/crm.html
@@ -817,11 +817,12 @@
         </div>
     </div>
 
-    <script src="js/crm-app.js?v=4.0"></script>
-    <script src="js/crm-users.js?v=4.0"></script>
-    <script src="js/crm-deadline-alerts.js?v=4.0"></script>
-    <script src="js/crm-deadline-calculator.js?v=4.0"></script>
-    <script src="js/crm-process-view.js?v=4.0"></script>
+    <script src="js/crm-app.js?v=4.1"></script>
+    <script src="js/crm-users.js?v=4.1"></script>
+    <script src="js/crm-deadline-alerts.js?v=4.1"></script>
+    <script src="js/crm-deadline-calculator.js?v=4.1"></script>
+    <script src="js/crm-process-view.js?v=4.1"></script>
+    <script src="js/crm-clickable-items.js?v=4.1"></script>
 </body>
 
 </html>
