--- a/public/crm.html
+++ b/public/crm.html
@@ -7,6 +7,7 @@
     <title>AVADA CRM | Sistema de Gestão</title>
     <link rel="stylesheet" href="css/crm-style.css">
     <link rel="stylesheet" href="css/deadline-alerts.css">
+    <link rel="stylesheet" href="css/kanban-board.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
