--- a/public/crm.html
+++ b/public/crm.html
@@ -80,7 +80,7 @@
                     <span class="menu-icon"><i class="fas fa-folder-open"></i></span>
                     <span>Processos Ativos</span>
                 </div>
-                <div class="menu-item" data-view="archived">
+                <div class="menu-item" data-view="archived" onclick="switchView('archived')">
                     <span class="menu-icon"><i class="fas fa-archive"></i></span>
                     <span>Arquivados</span>
                 </div>
