--- a/public/crm.html
+++ b/public/crm.html
@@ -720,12 +720,12 @@
         </div>
     </div>
 
-    <script src="js/crm-app.js?v=6.0"></script>
-    <script src="js/crm-users.js?v=6.0"></script>
-    <script src="js/crm-deadline-alerts.js?v=6.0"></script>
-    <script src="js/crm-deadline-calculator.js?v=6.0"></script>
-    <script src="js/crm-process-view.js?v=6.0"></script>
-    <script src="js/crm-processes-enhanced.js?v=6.0"></script>
+    <script src="js/crm-app.js?v=7.0&t=20260119"></script>
+    <script src="js/crm-users.js?v=7.0&t=20260119"></script>
+    <script src="js/crm-deadline-alerts.js?v=7.0&t=20260119"></script>
+    <script src="js/crm-deadline-calculator.js?v=7.0&t=20260119"></script>
+    <script src="js/crm-process-view.js?v=7.0&t=20260119"></script>
+    <script src="js/crm-processes-enhanced.js?v=7.0&t=20260119"></script>
 </body>
 
 </html>
