FIX: Dynamic Partnership Options for Admin vs Lawyers

--- a/public/crm.html
+++ b/public/crm.html
@@ -169,8 +169,7 @@
                         <label class="form-label">Tipo de Cliente *</label>
                         <select id="client-partnership" class="form-input" required>
                             <option value="">Selecione...</option>
-                            <option value="PARTICULAR">Particular</option>
-                            <option value="AVADA">Parceria AVADA</option>
+                            <!-- Opções populadas via JavaScript (crm-app.js) -->
                         </select>
                     </div>
                 </form>
