FIX: Close brace in showOkFeitoPopup function

--- a/public/crm.html
+++ b/public/crm.html
@@ -339,6 +339,7 @@
                             <option value="Emenda à Inicial (sempre reforce o pedido de gratuidade de justiça)">16.
                                 Emenda à Inicial (sempre reforce o pedido de gratuidade de justiça)</option>
                             <option value="Pedido de Autotutela">17. Pedido de Autotutela</option>
+                            <option value="Aguardando Julgamento">18. Aguardando Julgamento</option>
                         </select>
                     </div>
 
