FIX: Insert missing options and Robust Dashboard Filters

--- a/public/crm.html
+++ b/public/crm.html
@@ -340,6 +340,7 @@
                                 Emenda à Inicial (sempre reforce o pedido de gratuidade de justiça)</option>
                             <option value="Pedido de Autotutela">17. Pedido de Autotutela</option>
                             <option value="Aguardando Julgamento">18. Aguardando Julgamento</option>
+                            <option value="Recurso de Apelação">19. Recurso de Apelação</option>
                         </select>
                     </div>
 
@@ -542,6 +543,8 @@
                                 </option>
                                 <option value="Aguardando Recurso ao Colegiado da JARI">16. Aguardando Recurso ao
                                     Colegiado da JARI</option>
+                                <option value="Aguardando Recurso de Apelação">17. Aguardando Recurso de Apelação
+                                </option>
                             </optgroup>
                             <option value="Arquivado">Arquivado</option>
                         </select>
