Rename to Buscar Servidor + format output with checkmarks as requested

--- a/public/crm.html
+++ b/public/crm.html
@@ -94,8 +94,8 @@
                     <span>Consulta Veicular</span>
                 </div>
                 <div class="menu-item" onclick="loadOSINTView()" style="cursor: pointer;">
-                    <span class="menu-icon"><i class="fas fa-search-location"></i></span>
-                    <span>Ferramenta OSINT (BETA)</span>
+                    <span class="menu-icon"><i class="fas fa-user-shield"></i></span>
+                    <span>Buscar Servidor</span>
                 </div>
                 <div class="menu-item admin-only hidden" data-view="system-info">
                     <span class="menu-icon"><i class="fas fa-info-circle"></i></span>
