Final cleanup: Remove AI text and enforce strict OSINT filtering

--- a/public/crm.html
+++ b/public/crm.html
@@ -680,8 +680,8 @@
                     <h3 style="font-size: 1rem; margin-bottom: 15px; color: #4a5568;">Adicionar Novo Arquivo</h3>
                     <form id="upload-form" class="flex-row gap-10">
                         <input type="file" id="attachment-file" class="form-input" style="padding: 8px;" required>
-                        <button type="submit" class="btn btn-primary">
-                            <i class="fas fa-upload"></i> Enviar
+                        <button id="btnSearch" class="btn-primary w-full flex items-center justify-center gap-2">
+                            <i class="fas fa-search"></i> Iniciar Busca Web
                         </button>
                     </form>
                     <div id="upload-progress" class="hidden"
